--- a/requirements.txt
+++ b/requirements.txt
@@ -7,3 +7,7 @@ elasticsearch==8.11.0
 python-dotenv==1.0.0
 django-environ==0.11.2
 aiohttp>=3.9.1
+MT5Manager>=5.0.3906
+django-filter>=23.5
+djangorestframework-simplejwt>=5.3.1
+django-redis>=5.4.0
